--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name=".MyBaseApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".operation.OperationActivity" />
-        <activity android:name=".filedirchoose.ChooseFileActivity"/>
+        <activity android:name=".filedirchoose.ChooseFileActivity" />
     </application>
 
 </manifest>
